tests/effects-corpus/corpus/accept/pure_function_calling_polymorphic.pdx
// Pure function instantiating row-polymorphic callee to empty row
module PureCallingPoly = structure {
  effect Io {
    op read : (u16) -> u8
  }

  let poly_caller : forall e. (u16) -> u8 !{Io | e} =
    fn (port : u16) -> 0

  let pure_instantiate : (u16) -> u8 !{} =
    fn (port : u16) ->
      with io_handler handle Io {
        poly_caller(port)
      }
}
